avcodec/vorbis: fix decoding of single element huffman trees

Fixes Ticket2893

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>
(cherry picked from commit 742d8601031fc69748f62fe7c5164a22a0751021)

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>